--- a/maven/Dockerfile
+++ b/maven/Dockerfile
@@ -1,3 +1,3 @@
 FROM csanchez/maven:3.6-azulzulu-11-alpine
 
-RUN apk add --no-cache curl tar bash procps && apk add g++=8.3.0-r0
+RUN apk add g++=8.3.0-r0
